# thermomatic

./: .bazelrc  .envrc  .gitignore  BUILD  README.adoc  WORKSPACE  coverage.txt  go.mod  go.sum  launch.bazelrc
.github/workflows/: build.yml  go.yml
internal/client/: BUILD.bazel  reading.go
internal/common/: BUILD.bazel  common.go
internal/common/imei/: BUILD.bazel  imei.go  imei_test.go  imei_test_setup.go
internal/common/luhn/: BUILD.bazel  luhn.go  luhn_test.go
internal/imei/: BUILD.bazel  imei.go  imei_test.go
internal/server/: BUILD.bazel  server.go
