load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "library",
    srcs = ["common.go"],
    importpath = "github.com/kigster/thermomatic/internal/common",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common/imei:library",
        "//internal/common/luhn:library",
    ],
)
