load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "library",
    srcs = ["imei.go"],
    importpath = "github.com/kigster/thermomatic/internal/common/imei",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/common/luhn:library",
    ],
)

go_test(
    name = "test",
    size = "small",
    srcs = [
        "imei_test.go",
        "imei_test_setup.go",
    ],
    embed = [":library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
