load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "library",
    srcs = ["luhn.go"],
    importpath = "github.com/kigster/thermomatic/internal/common/luhn",
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    size = "small",
    srcs = ["luhn_test.go"],
    embed = [":library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
